--- a/webApplication/quickstart/build.gradle
+++ b/webApplication/quickstart/build.gradle
@@ -17,6 +17,7 @@ repositories {
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '1.4'
     compile group: 'log4j', name: 'log4j', version: '1.2.15', ext: 'jar'
+    compile group: 'junit', name: 'junit', version: '4.12'
 }
 
 gretty {
