--- a/webApplication/quickstart/build.gradle
+++ b/webApplication/quickstart/build.gradle
@@ -6,13 +6,25 @@ buildscript {
         classpath 'org.akhikhl.gretty:gretty:1.4.2'
     }
 }
+
+plugins {
+    id "org.sonarqube" version "2.5"
+}
+
 apply plugin: 'org.akhikhl.gretty'
 
 apply plugin: 'war'
+
+apply plugin: "jacoco"
+
 apply plugin: "org.sonarqube"
 
 repositories {
     jcenter()
+}
+
+ext {
+    JUNIT_VERSION = '4.12'
 }
 
 dependencies {
@@ -21,33 +33,13 @@ dependencies {
     compile group: 'junit', name: 'junit', version: '4.12'
 }
 
-
-
-jacoco {
-    toolVersion = "0.7.6.201602180812"
-    reportsDir = file("$buildDir/reports/jacoco")
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled false
-        csv.enabled false
-        html.destination "${buildDir}/jacocoHtml"
-    }
-}
-sonarqube {
-    properties {
-        property "sonar.projectName", "TechZone Rest API"
-        property "sonar.projectKey", "tz:rest-api"
-    }
-}
-
-
-
-
-
-
-
 gretty {
     httpPort = 8080
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectName", "WebApp Inspection"
+        property "sonar.projectKey", "tz:web-app"
+    }
 }
